<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/stream_activity_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc"
    tools:context=".StreamingActivity">

    <!-- The primary full-screen view. -->
    <FrameLayout
        android:id="@+id/fullscreen_stream_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:keepScreenOn="true">

        <net.majorkernelpanic.streaming.gl.SurfaceView
            android:id="@+id/stream_surface_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="fill"
            android:keepScreenOn="true" />

        <TextView
            android:id="@+id/stream_overlay_view"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="start"
            android:keepScreenOn="true"
            android:text="@string/stop_streaming_button"
            android:textColor="#ffffff"
            android:textSize="12sp"
            android:textStyle="italic" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/stream_controls_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <LinearLayout
            android:id="@+id/fullscreen_content_controls"
            style="?metaButtonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@color/black_overlay"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <ImageButton
                android:id="@+id/switch_camera_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@android:color/transparent"
                android:contentDescription="@string/switch_camera_button"
                app:srcCompat="@drawable/switch_camera" />

            <Button
                android:id="@+id/toggle_stream_button"
                style="?metaButtonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="6"
                android:background="@android:color/transparent"
                android:text="@string/stream_button" />

            <ImageButton
                android:id="@+id/settings_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@android:color/transparent"
                android:contentDescription="@string/settings_button"
                android:cropToPadding="false"
                app:srcCompat="@drawable/settings_cog" />

        </LinearLayout>
    </FrameLayout>

</FrameLayout>